# Course

./: .coverage  .env  .gitignore  README.md  pyproject.toml  requirements.txt
data/: operations.xlsx
src/: config.py  main.py  read_excel.py  reports.py  services.py  utils.py  views.py  екн.py
tests/: conftest.py  test_main.py  test_reports.py  test_services.py  test_utils.py
