[tool.poetry]
name = "course-work"
version = "0.1.0"
description = ""
authors = ["Sergei <nekrasov-nekras-nekrasov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
patch = "^1.16"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 119

[tool.black]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
